# poetry-install

./: .bumpver.toml  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  action.yml  pyproject.toml  pyproject.yml
.github/: dependabot.yml
.github/workflows/: release.yml  test-cache.yml  test.yml
